--- a/css/map_style.css
+++ b/css/map_style.css
@@ -1,4 +1,10 @@
-.leaflet-popup-content-wrapper,
-.leaflet-popup-tip {
-    background: yellow;
+.leaflet-popup-content-wrapper {
+padding: 1x;
+text-align: center;
 }
+
+.leaflet-popup-content-wrapper h1 {
+  color: #000000;
+  margin: 0;
+}
+
